objects/CRMforNonProfit__Darujme_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CRMforNonProfit__API_ID__c</fullName>
        <label>API ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__API_Key__c</fullName>
        <inlineHelpText>Stejne jako API ID</inlineHelpText>
        <label>API Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__API_Secret__c</fullName>
        <label>API Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact_Secondary_Email_API_Name__c</fullName>
        <description>API Name of field on Contact which should be used for darujme transaction pairing</description>
        <inlineHelpText>API Name of field on Contact which should be used for darujme transaction pairing</inlineHelpText>
        <label>Contact Secondary Email API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CreateContacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CustomFieldsMapping__c</fullName>
        <description>Parovaci tabulka mezi custom atributem z DarujmeAPI a Salesforce Darujme_Pledge fieldem.</description>
        <inlineHelpText>Optional - Zadejte parovaci tabulku mezi custom atributem z DarujmeAPI a Darujme_Pledge fieldem oddelenou :. Vice paru oddelte mezi sebou ;. Priklad: var_symb:fpack40__Custom_Fields__c;spec_symb:fpack40__Custom_Field5__c</inlineHelpText>
        <label>CustomFieldsMapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Notification_email__c</fullName>
        <description>Email addres for technical notifications about API callouts and processing</description>
        <label>Notification email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Organization_ID__c</fullName>
        <inlineHelpText>Toto ID je videt u darujme v linku v prohlizeci</inlineHelpText>
        <label>Organization ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Project_ID__c</fullName>
        <description>Optional - kdyz je zadan, tak stahuje z darujme pouze dany projekt</description>
        <inlineHelpText>Optional - kdyz je zadan, tak stahuje z darujme pouze dany projekt</inlineHelpText>
        <label>Project ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_Batch_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Pledges to be processed in one batch as future call. All Pledges processed in one batch if not set or zero.</description>
        <label>Sync Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_Last_N_days__c</fullName>
        <inlineHelpText>Zde nastavíme kolik dní zpátky chceme synchronizovat – nastavíme na 1, v případě, že jsme posílání do Salesforce vypnuli dnes.</inlineHelpText>
        <label>Sync Last N days</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_Last_N_days_to__c</fullName>
        <description>Urcuje koncovy pocet dnu - tzn. pokud se v Sync Last N days da 4 a v tomto poli 2, tak to stahne transakce za D-4, D-3, D-2</description>
        <inlineHelpText>Optional - Urcuje koncovy pocet dnu - tzn. pokud se v Sync Last N days da 4 a v tomto poli 2, tak to stahne transakce za D-4, D-3, D-2</inlineHelpText>
        <label>Sync Last N days To</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Darujme Settings</label>
</CustomObject>